Added user endpoint and login/session logic

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,13 +1,20 @@
 ktor {
-    deployment {
-        host = "127.0.0.1"
-        port = 8080
-    }
-    application {
-        modules = [ de.timbachmann.ApplicationKt.module ]
-    }
-    mongo {
-        uri = "mongodb://localhost:27017/" // ${?MONGO_URI}
-        database = "multimedia_tours"// ${?MONGO_DATABASE}
-    }
+  deployment {
+    host = System.getenv("HOST")
+    host = "127.0.0.1"
+    port = System.getenv("PORT")
+    port = 8090
+  }
+  application {
+    modules = [de.timbachmann.ApplicationKt.module]
+  }
+  mongo {
+    uri = System.getenv("MONGO_URI")
+    database = System.getenv("MONGO_DATABASE")
+  }
+  jwt {
+    issuer = System.getenv("JWT_ISSUER")
+    realm = System.getenv("JWT_REALM")
+    secret = System.getenv("JWT_SECRET")
+  }
 }
