--- a/src/main/resources/openapi/documentation.yaml
+++ b/src/main/resources/openapi/documentation.yaml
@@ -3,8 +3,6 @@ info:
   title: "Multimedia Tours API"
   description: "Multimedia Tours API"
   version: "1.0.0"
-servers:
-  - url: "http://127.0.0.1:8090"
 paths:
   /multimedia-objects:
     post:
@@ -106,7 +104,7 @@ paths:
               properties:
                 file:
                   type: string
-                  format: application/octet-stream
+                  format: binary
       responses:
         '201':
           description: Object uploaded successfully
@@ -127,8 +125,18 @@ paths:
         '200':
           description: Successful response
           content:
-            application/json:
-              example: { }
+            image/png:
+              schema:
+                type: string
+                format: binary
+            video/mp4:
+              schema:
+                type: string
+                format: binary
+            audio/mp3:
+              schema:
+                type: string
+                format: binary
         '404':
           description: MultimediaObject not found
       tags:
