--- a/src/main/resources/openapi/documentation.yaml
+++ b/src/main/resources/openapi/documentation.yaml
@@ -411,6 +411,10 @@ components:
           type: string
         source:
           type: string
+        tags:
+          type: array
+          items:
+            type: string
         position:
           $ref: '#/components/schemas/MultimediaObjectPosition'
         data:
@@ -447,6 +451,10 @@ components:
           $ref: '#/components/schemas/MultimediaObjectPosition'
         author:
           type: string
+        tags:
+          type: array
+          items:
+            type: string
 
     Tour:
       type: object
